------------------------------------------------------------------------
r336 | gaser | 2010-05-24 14:53:18

M       upfirdn2dMex.mexw64

Phil Kragel has recompiled upfirdn2dMex.c for Windows 64 bit because of some
problems with Windows Server 2008 R2.
------------------------------------------------------------------------
r337 | gaser | 2010-05-25 20:03:48

M       cg_vbm8_write.m

Added path of New Segment toolbox to cg_vbm8_write.m.
------------------------------------------------------------------------
r338 | gaser | 2010-05-27 07:35:45

M       kmeans3D.m
M       upfirdn2dMex.mexw32
M       cg_noise_estimation.m

(1) Michael Bodnar has recompiled upfirdn2dMex.c for Windows 32 bit because 
    of some problems with Windows XP and Vista.
(2) Changed kmeans3D.m to decrease the large memory demand.
------------------------------------------------------------------------
r339 | gaser | 2010-05-28 17:24:47

M       ornlmMex.mexw32
M       upfirdn2dMex.mexw32
M       AmapMex.mexw32
M       cg_noise_estimation.m

(1) Marko Wilke has recompiled the c-code for windows 32bit, which will
    hopefully solve the problems with the mexw32 files.
(2) Updated cg_noise_estimation.m to save memory.
------------------------------------------------------------------------
r340 | gaser | 2010-05-31 21:03:58

M       cg_vbm8_write.m

cg_vbm8_write.m now prints the correct revision number of VBM8.
------------------------------------------------------------------------
r341 | gaser | 2010-06-03 12:34:57

M       kmeans3D.m
M       cg_vbm8_write.m

(1) Replaced kmeans3D.m by code from spm_kmeans1.m.
(2) Get correct revision number in cg_vbm8_write.m.
------------------------------------------------------------------------
r342 | gaser | 2010-06-22 22:57:19

M      cg_spmT2x.m

Voxel values were always thresholded at uncorrected p-values in cg_spmT2x.m.
------------------------------------------------------------------------
r343 | gaser | 2010-06-25 09:12:42